--- a/r_Rmd/February 2022.Rmd
+++ b/r_Rmd/February 2022.Rmd
@@ -263,6 +263,37 @@ us_map %>%
 
 ```
 
+# 20220210: **[`ggvoronoi`](https://cran.r-project.org/web/packages/ggvoronoi/vignettes/ggvoronoi.html)**
+
+```{r ggvoronoi-setup, include = FALSE}
+p_load(ggvoronoi)
+
+set.seed(45056)
+x <- sample(1:200,100)
+y <- sample(1:200,100)
+points <- data.frame(x, y,
+                     distance = sqrt((x - 100)^2 + (y - 100)^2))
+
+circle <- data.frame(x = 100*(1 + cos(seq(0, 2*pi, length.out = 2500))),
+                     y = 100*(1 + sin(seq(0, 2*pi, length.out = 2500))),
+                     group = rep(1,2500))
+
+```
+
+```{r ggvoronoi-plots, include = TRUE}
+ggplot(data = points, aes(x = x, y = y, fill = distance)) + 
+  geom_voronoi(outline = circle) +
+  theme(aspect.ratio = 1)
+
+ggplot(data = points, aes(x = x, y = y, fill = distance)) + 
+  geom_voronoi(outline = circle, color = "white", show.legend = FALSE) +
+  paletteer::scale_fill_paletteer_c("ggthemes::Green-Blue-White Diverging") + 
+  coord_fixed(ratio = 1) + 
+  theme(legend.position = "none") +
+  theme_void()
+
+```
+
 
 # Ideas
 
